# WebCrawler

./: .gitignore  README.md  main.py  output.xlsx  pyproject.toml  test.py
config/: __init__.py  config.py
export/: cerlo_1440_720.xlsx
src/services/: async_crawler.py  async_crawler_pro.py  crawler.py
src/utils/: functions.py
